--- a/pics/src/css/index.css
+++ b/pics/src/css/index.css
@@ -1,9 +1,3 @@
 .container {
-   display: grid;
-   place-items: center;
-   height: 100vh;
-}
-
-h1 {
-   font-size: 5rem;
+   padding: 2em 0.5em;
 }
